# jipandan-clip

./: .gitignore  README.md  pyproject.toml
src/jipandan/: __init__.py
src/jipandan/cli/: __init__.py  generate_commands.py  transcribe.py
src/jipandan/core/: __init__.py  clip.py  whisper.py
